# LLM-Powered-Data-Science-Assistant

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  config.py  gradio_app.py  main.ipynb  main.py  pyproject.toml
models/: __init__.py  agent.py
outputs/: README.md
utils/: __init__.py  data_tools.py  dataset_manager.py  outputs_manager.py
