[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-powered-data-science-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "gradio>=5.29.1",
    "google>=3.0.0",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "langchain>=1.2.15",
    "langchain-groq>=0.3.8",
    "langchain-google-genai>=4.2.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-sdk>=0.3.13",
    "langsmith>=0.7.32",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.12",
]

[tool.setuptools]
py-modules = []
packages = []

